--- a/AndroidAPIDemos/app/build.gradle
+++ b/AndroidAPIDemos/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "hu.autsoft.androidapidemos"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -30,4 +30,9 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.google.android.gms:play-services-vision:10.0.1'
+
+    compile "com.android.support:support-v13:25.0.1"
+
+    compile "com.android.support:support-v4:25.0.1"
+    compile "com.android.support:cardview-v7:25.0.1"
 }
