--- a/AndroidAPIDemos/app/src/main/AndroidManifest.xml
+++ b/AndroidAPIDemos/app/src/main/AndroidManifest.xml
@@ -3,8 +3,10 @@
     package="hu.autsoft.androidapidemos">
 
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
         android:allowBackup="true"
@@ -23,7 +25,8 @@
         <activity android:name=".OCRActivity" />
         <activity android:name=".TimingLoggerActivity" />
         <activity android:name=".ScreenCaptureActivity" />
-        <activity android:name=".PDFCreateActivity"></activity>
+        <activity android:name=".PDFCreateActivity" />
+        <activity android:name=".CameraActivity"></activity>
     </application>
 
 </manifest>
